--- a/css/styles.css
+++ b/css/styles.css
@@ -220,3 +220,9 @@ a.custom-card:hover {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+.userEmail {
+  padding-top: 8px;
+  margin-bottom: 0px;
+  color: white;
+}
